# common-thrift-hello-world

./: .gitignore  README.md
Thrift/: gencpp.bat  gencpp.sh
cpp/: CMakeLists.txt  README  README-linux  README.md  build-libthrift.bat  build-libthriftnb.bat  environment.bat  environment.cmake
cpp/VS/client/: client.sln  client.vcxproj  client.vcxproj.filters
cpp/VS/server/: server.sln  server.vcxproj  server.vcxproj.filters
cpp/client/: CMakeLists.txt
cpp/gcc/: Makefile
cpp/server/: CMakeLists.txt
cpp/src/: CMakeLists.txt  environment.cmake
cpp/src/client/: CMakeLists.txt  client.cpp
cpp/src/server/: CMakeLists.txt  DummyServiceImpl.cpp  DummyServiceImpl.h  server.cpp  servernb.cpp
java/: LICENSE  README.md  build.gradle  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/com/dataart/javathrifthelloworld/: App.java  CalculatorImpl.java  DummyServiceImpl.java
java/src/main/thrift/: dummy.thrift
java/src/test/java/com/dataart/javathrifthelloworld/: CalculatorTest.java  DummyServiceTest.java
thrift/: gencpp.sh
thrift/thrift-src/: dummy.thrift
